--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -13,7 +13,16 @@
     </li>
 
 }
-    @section styles{
+
+    @using System.Globalization;
+    @{
+    NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
+    formato.CurrencyGroupSeparator = ",";
+    formato.NumberDecimalSeparator = ".";
+
+
+}
+@section styles{
 
     <style>
 
@@ -387,7 +396,7 @@
             for (var i = 0; i < ProdCadena.length; i++) {
                 sOptions += '<tr>'
                 sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + ProdCadena[i].ItemCode + '</p></td>';
-                sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + ProdCadena[i].Cantidad + '</p></td>';
+                sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + formatoDecimal(ProdCadena[i].Cantidad) + '</p></td>';
                 sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + ProdCadena[i].Stock + '</p></td>';
 
 
@@ -407,7 +416,7 @@
             for (var i = 0; i < ProdCadenaM.length; i++) {
                 sOptions += '<tr>'
                 sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + ProdCadenaM[i].ItemCode + '</p></td>';
-                sOptions += '<td align="left" style="padding-top:15px;">  <input id="cantidad-' + i + '" value="' + ProdCadenaM[i].Cantidad + '"  type="number" /> </td>';
+                sOptions += '<td align="left" style="padding-top:15px;">  <input id="cantidad-' + i + '" value="' + formatoDecimal(ProdCadenaM[i].Cantidad) + '"  type="number" /> </td>';
                 sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">' + ProdCadenaM[i].Stock + '</p></td>';
 
 
@@ -467,7 +476,7 @@
                     sOptions += '<td align="center" style="padding-top:15px;">  <p style="font-size:15px;">N/A</p></td>';
 
                 } else {
-                    sOptions += '<td align="center" style="padding-top:15px;">  <input id="cantidad-' + i + '" value="' + ProdCadenaM[i].Cantidad + '"  type="number" /> </td>';
+                    sOptions += '<td align="center" style="padding-top:15px;">  <input id="cantidad-' + i + '" value="' + formatoDecimal(ProdCadenaM[i].Cantidad) + '"  type="number" /> </td>';
 
                 }
 
@@ -1108,7 +1117,7 @@
                                 {
                                     <tr>
                                         <td align="center">@item.ItemCode</td>
-                                        <td align="right">@item.Cantidad</td>
+                                        <td align="right">@item.Cantidad.ToString("N",formato)</td>
 
                                     </tr>
                                 }
